--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   yaml: ^3.1.1
   json2yaml: ^3.0.0
   ms_undraw: ^3.1.0+2
+  file_picker: ^4.6.1
 
 dev_dependencies:
   flutter_test:
