--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,13 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   yaml: ^3.1.1
   json2yaml: ^3.0.0
-  ms_undraw: ^3.1.0+2
   file_picker: ^4.6.1
+  menubar:
+    git:
+      url: https://github.com/google/flutter-desktop-embedding.git
+      path: plugins/menubar
+      ref: 12decbe0f592e14e03223f6f2c0c7e0e2dbd70a1
+  lucide_icons: ^0.83.0
 
 dev_dependencies:
   flutter_test:
