--- a/.github/workflows/versioning.yaml
+++ b/.github/workflows/versioning.yaml
@@ -14,7 +14,7 @@ jobs:
         fetch-depth: 0
     - name: Get next version
       id: get_next_version
-      uses: thenativeweb/get-next-version
+      uses: thenativeweb/get-next-version@2.0.0
     - name: Show the next version
       run: |
         echo ${{ steps.get_next_version.outputs.version }}
