--- a/.github/workflows/versioning.yaml
+++ b/.github/workflows/versioning.yaml
@@ -20,7 +20,7 @@ jobs:
         echo ${{ steps.get_next_version.outputs.version }}
         echo ${{ steps.get_next_version.outputs.hasNextVersion }}
     - name: Create release
-      if: ${{ steps.get_next_version.outputs.version == 'true' }}
+      if: ${{ steps.get_next_version.outputs.hasNextVersion == 'true' }}
       run: |
         NEXT_VERSION = ${{ steps.get_next_version.outputs.version }}
         git tag $NEXT_VERSION
