--- a/.github/workflows/versioning.yaml
+++ b/.github/workflows/versioning.yaml
@@ -19,9 +19,9 @@ jobs:
       run: |
         echo ${{ steps.get_next_version.outputs.version }}
         echo ${{ steps.get_next_version.outputs.hasNextVersion }}
-    - name: Create release
+    - name: Create new version
       if: ${{ steps.get_next_version.outputs.hasNextVersion == 'true' }}
       run: |
-        NEXT_VERSION = ${{ steps.get_next_version.outputs.version }}
+        NEXT_VERSION=${{ steps.get_next_version.outputs.version }}
         git tag $NEXT_VERSION
         git push origin $NEXT_VERSION
