--- a/.github/workflows/versioning.yaml
+++ b/.github/workflows/versioning.yaml
@@ -1,6 +1,12 @@
 name: Release new version
 
-on: pull_request
+on: 
+  pull_request:
+    branches:
+      - main
+  push:
+    branches: 
+      - main
 
 jobs:
   release:
