fix(editor): pass empty map if no font config is given
bundle font 'Fira Code' with Molecule and use it as default for editor.

fixes #22

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,4 +46,7 @@ flutter:
     - family: Roboto
       fonts:
         - asset: fonts/Roboto-Regular.ttf
+    - family: Fira Code
+      fonts:
+        - asset: fonts/FiraCode.ttf
 
